Removed Blue highlight and Underline from link

--- a/src/components/PodcastCard.module.css
+++ b/src/components/PodcastCard.module.css
@@ -1,4 +1,7 @@
 .card {
+  text-decoration: none; 
+  color: inherit;
+  user-select: none;
   background: white;
   padding: 1rem;
   border-radius: 8px;
